--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "ucf-web-migrate",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "description": "一个 CLI 工具，旨在帮助uba开发者用户快速将其工程迁移升级为 ucf-web 微前端框架。",
   "main": "index.js",
+  "bin": {
+    "migrate": "./bin/migrate-cli"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +28,7 @@
     "js-beautify": "^1.8.9",
     "rimraf": "^2.6.3",
     "string-format": "^2.0.0",
-    "template_js": "^0.7.1-1"
+    "template_js": "^0.7.1-1",
+    "minimist": "^1.2.0"
   }
 }
