--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "minimist": "^1.2.0"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "js-beautify": "^1.8.9",
     "rimraf": "^2.6.3",
+    "single-line-log": "^1.1.2",
     "string-format": "^2.0.0",
-    "template_js": "^0.7.1-1",
-    "minimist": "^1.2.0"
+    "template_js": "^0.7.1-1"
   }
 }
