--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ucf-web-migrate",
-  "version": "0.0.2-beta",
+  "version": "1.0.0",
   "description": "一个 CLI 工具，旨在帮助uba开发者用户快速将其工程迁移升级为 ucf-web 微前端框架。",
   "main": "src/index.js",
   "bin": {
